syntax = "proto3";
option java_multiple_files = true;
package eg.prog.grpc;

message HelloRequest {
  string firstName = 1;
  string lastName = 2;
}

message HelloResponse {
  string greeting = 1;
}

service HelloService {
  rpc hello(HelloRequest) returns (HelloResponse);
  rpc getHelloStream(HelloRequest) returns (stream HelloResponse);
  rpc getHelloStream2(stream HelloRequest) returns ( HelloResponse);
  rpc getHelloStream3(stream HelloRequest) returns (stream HelloResponse);
}